[tool.poetry]
name = "akro-app"
version = "0.1.0"
description = ""
authors = ["MariusSuessmilch <47320006+MariusSuessmilch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "akro_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
